Fixed hero button spacing.

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -153,7 +153,7 @@
   .ms-Button-icon {
     color: $ms-color-themePrimary;
     display: inline-block;
-    @include margin-right(4px);
+    @include margin-right(8px);
     padding-top: 5px;
     font-size: $ms-icon-size-l;
     line-height: 1; // FireFox vertical offset
